<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_asset_bookmark"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_asset_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_capsules"
        android:icon="@drawable/ic_asset_bookmark"
        android:title="@string/title_capsules" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_asset_contacts"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_asset_cog"
        android:title="@string/title_profile" />

</menu>

