<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/createCapsuleActivity"
        android:name="com.example.chronovault.ui.capsules.CreateCapsuleActivity"
        android:label="Create Capsule" />

    <activity
        android:id="@+id/capsuleDetailsActivity"
        android:name="com.example.chronovault.ui.capsules.CapsuleDetailsActivity"
        android:label="Capsule Details">
        <argument
            android:name="capsule_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </activity>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chronovault.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.chronovault.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_capsuleDetailsActivity"
            app:destination="@id/capsuleDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_capsules"
        android:name="com.example.chronovault.ui.capsules.CapsulesFragment"
        android:label="@string/title_capsules_list"
        tools:layout="@layout/fragment_capsules">
        <action
            android:id="@+id/action_capsulesFragment_to_createCapsuleActivity"
            app:destination="@id/createCapsuleActivity" />
        <action
            android:id="@+id/action_capsulesFragment_to_capsuleDetailsActivity"
            app:destination="@id/capsuleDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.chronovault.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.chronovault.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>



